--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "d3": "^7.8.5",
     "lightweight-charts": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph": "^1.43.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "reactflow": "^11.8.3",
     "styled-components": "^6.0.7",
